--- a/charts/esphome/values.yaml
+++ b/charts/esphome/values.yaml
@@ -31,6 +31,13 @@ readinessProbe:
     path: /
     port: 6052
 
+resources:
+  requests:
+    memory: 500Mi
+    cpu: 200m
+  limits:
+    memory: 500Mi
+    cpu: 200m
 
 persistence:
   enabled: false
