--- a/charts/nextcloud/templates/nextcloud/nextcloud-ingress.yaml
+++ b/charts/nextcloud/templates/nextcloud/nextcloud-ingress.yaml
@@ -32,6 +32,16 @@ spec:
     scheme: https
     permanent: true
 ---
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: redirectregex
+spec:
+  redirectRegex:
+    regex: "https://(.*)/.well-known/(?:card|cal)dav"
+    replacement: "https://${1}/remote.php/dav"
+    permanent: true
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -39,10 +49,12 @@ metadata:
   annotations:
     cert-manager.io/cluster-issuer: "{{ .Values.nextcloud.ingress.tls }}"
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
     traefik.ingress.kubernetes.io/router.middlewares: | 
       {{ template "nextcloud.fullname" . }}-stripprefix@kubernetescrd,
       {{ template "nextcloud.fullname" . }}-redirectscheme@kubernetescrd,
-      {{ template "nextcloud.fullname" . }}-headers@kubernetescrd
+      {{ template "nextcloud.fullname" . }}-headers@kubernetescrd,
+      {{ template "nextcloud.fullname" . }}-redirectregex@kubernetescrd
     traefik.ingress.kubernetes.io/rewrite-target: /
 spec:
   tls:
