--- a/charts/nextcloud/templates/nextcloud/nextcloud-deployment.yaml
+++ b/charts/nextcloud/templates/nextcloud/nextcloud-deployment.yaml
@@ -31,6 +31,7 @@ spec:
         securityContext:
           runAsUser: 33
           runAsGroup: 33
+          runAsNonRoot: true
         ports:
           - containerPort: {{ .Values.nextcloud.port }}
             protocol: TCP
