--- a/charts/nextcloud/templates/nextcloud/nextcloud-cron.yaml
+++ b/charts/nextcloud/templates/nextcloud/nextcloud-cron.yaml
@@ -33,7 +33,7 @@ spec:
             image: "{{ .Values.nextcloud.image.repository }}:{{ .Values.nextcloud.image.tag }}{{- with .Values.nextcloud.image.flavor }}-{{ . }}{{- end }}"
             {{- with .Values.nextcloud.securityContext }}
             securityContext:
-              {{ . | nindent 10 }}
+              {{- toYaml . | nindent 10 }}
             {{- end }}
             env:
               {{- include "nextcloud.env" . | trim | nindent 14 }}
@@ -90,7 +90,7 @@ spec:
             image: "{{ .Values.nextcloud.image.repository }}:{{ .Values.nextcloud.image.tag }}{{- with .Values.nextcloud.image.flavor }}-{{ . }}{{- end }}"
             {{- with .Values.nextcloud.securityContext }}
             securityContext:
-              {{ . | nindent 10 }}
+              {{- toYaml . | nindent 10 }}
             {{- end }}
             env:
               {{- include "nextcloud.env" . | trim | nindent 14 }}
