--- a/charts/mqtt/templates/zigbee2mqtt-deployment.yaml
+++ b/charts/mqtt/templates/zigbee2mqtt-deployment.yaml
@@ -40,7 +40,10 @@ spec:
       containers:
         - name: zigbee2mqtt
           securityContext:
-            privileged: true
+            runAsNonRoot: false
+            readOnlyRootFilesystem: false
+            runAsUser: 0
+            runAsGroup: 0
           image: "{{ .Values.addons.zigbee2mqtt.image.repository }}:{{ .Values.addons.zigbee2mqtt.image.tag }}"
           imagePullPolicy: {{ .Values.addons.zigbee2mqtt.image.pullPolicy }}
           ports:
