--- a/charts/mqtt/templates/mqtt-deployment.yaml
+++ b/charts/mqtt/templates/mqtt-deployment.yaml
@@ -36,19 +36,21 @@ spec:
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
-        - name: "main"
+        - name: "mqtt"
           containerPort: {{ .Values.service.port }}
           protocol: TCP
-        - name: "ws"
+        - name: "mqtt-ws"
           containerPort: 9001
           protocol: TCP
         env:
           - name: TZ
             value: {{ .Values.timezone | quote }}
         livenessProbe:
-          {{- toYaml .Values.livenessProbe | nindent 12 }}
+          tcpSocket:
+            port: {{ .Values.service.port }}
         readinessProbe:
-          {{- toYaml .Values.readinessProbe | nindent 12 }}
+          tcpSocket:
+            port: {{ .Values.service.port }}
         resources:
           {{- toYaml .Values.resources | nindent 12 }}
         volumeMounts:
