--- a/charts/mqtt/templates/mqtt-service.yaml
+++ b/charts/mqtt/templates/mqtt-service.yaml
@@ -8,14 +8,14 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - name: main
+    - name: mqtt
       port: {{ .Values.service.port }}
       protocol: TCP
-      targetPort: main
-    - name: ws
+      targetPort: mqtt
+    - name: mqtt-ws
       port: 9001
       protocol: TCP
-      targetPort: ws
+      targetPort: mqtt-ws
   selector:
     {{- include "mosquitto.selectorLabels" . | nindent 4 }}
     app.kubernetes.io/component: mqtt
