--- a/charts/frigate/templates/deployment.yaml
+++ b/charts/frigate/templates/deployment.yaml
@@ -28,8 +28,13 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag  }}{{- if gt (int .Values.gpu.nvidia) 0 }}-tensorrt{{- end }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          {{- if .Values.coral.enabled }}
           securityContext:
-            fsGroup: 1000
+            runAsNonRoot: false
+            readOnlyRootFilesystem: false
+            runAsUser: 0
+            privileged: true
+          {{- end }}
           ports:
             - name: http
               containerPort: 5000
