servarr: fix correct resources

--- a/charts/servarr/templates/lidarr/lidarr-deployment.yaml
+++ b/charts/servarr/templates/lidarr/lidarr-deployment.yaml
@@ -62,8 +62,7 @@ spec:
           readinessProbe:
             {{- toYaml .Values.lidarr.readinessProbe | nindent 12 }}
           resources:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
+            {{- toYaml .Values.lidarr.resources | nindent 12 }}
           volumeMounts:
             - name: lidarr-config
               mountPath: /config
