--- a/charts/servarr/templates/codeserver/codeserver-deployment.yaml
+++ b/charts/servarr/templates/codeserver/codeserver-deployment.yaml
@@ -47,8 +47,7 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           resources:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
+            {{- toYaml .Values.addons.codeserver.resources | nindent 12 }}
           volumeMounts:
             - mountPath: /config
               name: codeserver-config
