--- a/charts/servarr/templates/flaresolverr/flaresolverr-deployment.yaml
+++ b/charts/servarr/templates/flaresolverr/flaresolverr-deployment.yaml
@@ -46,8 +46,7 @@ spec:
           readinessProbe:
             {{- toYaml .Values.flaresolverr.readinessProbe | nindent 12 }}
           resources:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
+            {{- toYaml .Values.flaresolverr.resources | nindent 12 }}
       {{- with .Values.flaresolverr.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
