--- a/charts/servarr/templates/prowlarr/prowlarr-deployment.yaml
+++ b/charts/servarr/templates/prowlarr/prowlarr-deployment.yaml
@@ -62,8 +62,7 @@ spec:
           readinessProbe:
             {{- toYaml .Values.prowlarr.readinessProbe | nindent 12 }}
           resources:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
+            {{- toYaml .Values.prowlarr.resources | nindent 12 }}
           volumeMounts:
             - name: prowlarr-config
               mountPath: /config
