--- a/charts/servarr/templates/rdtclient/rdtclient-deployment.yaml
+++ b/charts/servarr/templates/rdtclient/rdtclient-deployment.yaml
@@ -44,8 +44,7 @@ spec:
           readinessProbe:
             {{- toYaml .Values.rdtclient.readinessProbe | nindent 12 }}
           resources:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
+            {{- toYaml .Values.rdtclient.resources | nindent 12 }}
           volumeMounts:
             - name: rdtclient-config
               mountPath: /data/db
