--- a/charts/servarr/templates/recyclarr/recyclarr-deployment.yaml
+++ b/charts/servarr/templates/recyclarr/recyclarr-deployment.yaml
@@ -42,8 +42,7 @@ spec:
             - name: CRON_SCHEDULE
               value: {{ .Values.recyclarr.cron | quote }}
           resources:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
+            {{- toYaml .Values.recyclarr.resources | nindent 12 }}
           volumeMounts:
             - name: recyclarr-config
               mountPath: /config
