--- a/charts/servarr/templates/sonarr/sonarr-deployment.yaml
+++ b/charts/servarr/templates/sonarr/sonarr-deployment.yaml
@@ -62,8 +62,7 @@ spec:
           readinessProbe:
             {{- toYaml .Values.sonarr.readinessProbe | nindent 12 }}
           resources:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
+            {{- toYaml .Values.sonarr.resources | nindent 12 }}
           volumeMounts:
             - name: sonarr-config
               mountPath: /config
