--- a/charts/frigate/templates/ingress.yaml
+++ b/charts/frigate/templates/ingress.yaml
@@ -3,8 +3,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "frigate.fullname" . }}
+  {{- with .Values.ingress.annotations }}
   annotations:
-    cert-manager.io/cluster-issuer: "{{ .Values.ingress.tls }}"
+    {{ toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   tls:
     - hosts:
