[vaultwarden] rework ingress annotations

--- a/charts/vaultwarden/templates/ingress.yaml
+++ b/charts/vaultwarden/templates/ingress.yaml
@@ -4,7 +4,10 @@ kind: Ingress
 metadata:
   name: {{ include "vaultwarden.fullname" . }}
   annotations:
-    cert-manager.io/cluster-issuer: "{{ .Values.ingress.tls }}"
+    {{- with .Values.ingress.annotations }}
+    annotations:
+      {{ toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   tls:
     - hosts:
