--- a/charts/authelia/templates/authelia/service.yaml
+++ b/charts/authelia/templates/authelia/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "authelia.fullname" . }}
+  name: {{ include "authelia.fullname" . }}
   labels:
     {{- include "authelia.labels" . | nindent 4 }}
     app.kubernetes.io/component: authelia
